add one space line so I can type in comment for last check in. Last check in . r=cata a=chofmann. fix bug 17192. do contextual analysis for U+2019src